--- a/views/src/components/Banner.css
+++ b/views/src/components/Banner.css
@@ -1,19 +1,45 @@
 .img__logo {
-    background-color: grey;
-    padding: 10px;
-    height: calc(8vh - 10px);
-    object-fit: cover;
-    border-radius: 6px;
-    margin-right: 10px;
+  background-color: grey;
+  padding: 10px;
+  height: calc(8vh - 10px);
+  object-fit: cover;
+  border-radius: 6px;
+  margin-right: 10px;
 }
 
 .header {
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    height: 8%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  height: 8%;
+  background-color: #A8D0E6;
 }
 
 .h1__title {
-    font-size: 3rem;
+  font-size: 3rem;
+}
+
+.btn__text--blue {
+  color: #007bc2;
+  border-radius: 6px;
+  font-size: 2rem;
+  margin-right: 10px;
+  transition: all 300ms;
+}
+.btn__text--blue:hover {
+    color: #004369;
+}
+
+.btn__blue {
+  background-color: #375685;
+  font-weight: 600;
+  color: white;
+  padding: 8px;
+  border-radius: 6px;
+  font-size: 2rem;
+  transition: all 300ms;
+}
+
+.btn__blue:hover {
+    background-color: #21334d;
 }
