--- a/views/src/index.css
+++ b/views/src/index.css
@@ -1,32 +1,60 @@
 * {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,h2,h3,h4,h5,h6,p,a {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
   margin: 0;
   padding: 0;
   font-size: 16px;
   text-decoration: none;
   color: black;
+  font-family: "Montserrat", sans-serif;
+}
+
+textarea, input { 
+  outline: none;
+  border: none; 
+  height: 36px;
+  width: 100%;
+  border-radius: 6px;
+  transition: all 350ms;
+  display: block;
+  padding-left: 10px;
+}
+
+input:focus {
+  box-shadow: 0 0 0 3px #37478596;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 .flex_row {
-    display: flex;
+  display: flex;
+}
+
+.flex__row--reverse {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .flex_column {
