--- a/views/src/index.css
+++ b/views/src/index.css
@@ -57,10 +57,25 @@ code {
   flex-direction: row-reverse;
 }
 
-.flex_column {
+.flex__column {
   display: flex;
+  flex-direction: column;
 }
 
 .align-center {
   align-items: center;
+}
+
+.space_between {
+  justify-content: space-between;
+  align-items: center;
+}
+
+hr {
+  border-bottom: none;
+}
+
+button {
+  border: none;
+  background-color: transparent;
 }
