project page is now created and styled

--- a/views/src/index.css
+++ b/views/src/index.css
@@ -71,6 +71,14 @@ code {
   align-items: center;
 }
 
+.space_around {
+  justify-content: space-around;
+}
+
+.space_evenly {
+  justify-content: space-evenly;
+}
+
 hr {
   border-bottom: none;
 }
