--- a/views/src/components/dashboard/ManageWorkspaces.css
+++ b/views/src/components/dashboard/ManageWorkspaces.css
@@ -23,3 +23,54 @@
     color: white;
     cursor: pointer;
 }
+
+.modal__form input, textarea {
+background-color: #d8d4d47e;
+    font-size: 20px;
+}
+
+.modal__form textarea {
+    padding: 10px;
+    flex: 1;
+}
+
+.modal__form label {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+textarea:focus {
+    box-shadow: 0 0 0 3px #37478596;
+}
+
+.btn--green {
+  background-color: #51db21;
+  border-radius: 6px;
+  text-align: center;
+  height: 36px;
+  color: white;
+  font-weight: 700;
+  transition: 300ms all;
+  flex: 1 1 50%;
+}
+
+.btn--green:hover {
+  background-color: #39a017e3;
+  cursor: pointer;
+}
+
+.btn--red {
+  background-color: #db0000;
+  border-radius: 6px;
+  text-align: center;
+  height: 36px;
+  color: white;
+  font-weight: 700;
+  transition: 300ms all;
+  flex: 1 1 50%;
+}
+
+.btn--red:hover {
+    cursor: pointer;
+    background-color: #af0000;
+}
